--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!--activity_game.xml-->
+<!--//Authors: Jins & Sailesh-->
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
