--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--activity_main.xml-->
+
+<!--//Authors: Jins & Sailesh-->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -13,7 +14,7 @@
         android:id="@+id/tv_instructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to TiltBall! Here's how to play:\n\n1. Tilt your device left or right to guide the ball\n2. Avoid hitting any obstacles in red\n3. If the ball hits an obstacle, it's GAME OVER !!\n\nPress the 'Start game' button when you're ready to begin. Good luck!"
+        android:text="Welcome to TiltBall! Here's how to play:\n\n1. Tilt your device to guide the ball\n2. Avoid hitting any obstacles in red\n3. Hitting blue ball grants you 50 points\n4. If the ball hits an obstacle, it's GAME OVER !!\n\nPress the 'Start game' button when you're ready to begin. Good luck!"
         android:textAlignment="center"
         android:layout_marginBottom="24dp"
         android:textSize="15sp"
